# intgemm

./: .gitignore  AVX_Matrix_Mult.cc  AVX_Matrix_Mult.cpp  AVX_Matrix_Mult.h  Benchmark.cc  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  Quantize.cc  Quantize.h  QuantizeTest.cc  README.md  SSE_Matrix_Mult.cc  SSE_Matrix_Mult.cpp  SSE_Matrix_Mult.h  StopWatch.cc  StopWatch.h  Test.cc  Vector_Functions.cpp  aligned.h  avx2_gemm.cc  avx2_gemm.h  avx512_gemm.cc  avx512_gemm.h  avx512vnni_gemm.h  backends.h  benchmark.cc  benchmark_log4.cc  benchmark_sigmoid.cc  benchmark_sigmoid_accuracy.cc  benchmark_sigmoid_time.cc  callbacks.h  compile_test_avx2.cc  compile_test_avx512bw.cc  compile_test_avx512vnni.cc  config.h.in  cops.h  cpu_type.h  dispatch.cc  (+33 more)
.github/workflows/: build-ubuntu-18.04-omp.yml  build-ubuntu-18.04.yml  c-cpp.yml  intel-19.yml  mac.yml  release.yml  ubuntu-debug.yml  ubuntu-gcc5-debug.yml  ubuntu-gcc5.yml  ubuntu-mac-omp.yml  ubuntu-mac.yml  ubuntu-no-cpuid-environment.yml  ubuntu-noexceptions.yml  ubuntu-omp.yml  ubuntu.yml  windows.yml
4bit/: 4bit.h
backends/: avx2.h  avx512.h  avx512vnni.h  backend.h  sse2.h  ssse3.h  unsupported.h
benchmarks/: benchmark.cc  benchmark_log4.cc  benchmark_quantizer.cc  benchmark_tile.cc  benchmark_tile_vs_mult.cc  biasmultiply.cc  do_not_optimize.h  multiply_tiles_benchmark.cc  non_mult_8.cc  test_matrices.h
callbacks/: avx2.h  avx512.h  configs.h  implementations.inl  output_buffer_info.h  sse2.h
compile_test/: avx2.cc  avx512bw.cc  avx512vnni.cc
intgemm/: aligned.h  avx2_gemm.h  avx512_gemm.h  avx512vnni_gemm.h  callbacks.h  interleave.h  intgemm.cc  intgemm.h  intgemm_config.h.in  intrinsics.h  kernels.h  multiply.h  sse2_gemm.h  ssse3_gemm.h  static_loop.h  stats.h  stats.inl  types.h  utils.h  vec_traits.h
intgemm/callbacks/: implementations.inl
intgemm/kernels/: implementations.inl
intgemm/tile/: dot.h  dot.inl  multiply.inl  reduce.inl
kernels/: avx2.h  avx512.h  implementations.inl  sse2.h
log4/: log4.h
test/: add127_test.cc  common.cc  common.h  log4_test.cc  multiply_test.cc  multiply_tiling_test.cc  pipeline_test.cc  prepare_b.cc  prepare_b_quantized_transposed.cc  prepare_b_transposed.cc  quantize_test.cc  rearrangement_b_test.cc  relu_test.cc  sigmoid_test.cc  tanh_test.cc  test.cc  test.h  test_matrices.h  tile_test.cc  tile_test.inl  utils_test.cc
test/kernels/: add_bias_test.cc  bitwise_not_test.cc  downcast_test.cc  exp_test.cc  floor_ff_test.cc  floor_test.cc  highway_test.cc  lookup_test.cc  multiply_sat_test.cc  multiply_test.cc  quantize_test.cc  relu_test.cc  rescale_test.cc  sigmoid_test.cc  tanh_test.cc  unquantize_test.cc  upcast_test.cc  write_test.cc
test/postprocess/: add_bias_test.cc  pipeline_test.cc  relu_test.cc  sigmoid_test.cc  tanh_test.cc  unquantize_test.cc
tile/: access.h  callbacks.h  dot.h  dot.inl  multiply.h  multiply.inl  reduce.h  reduce.inl
